--- a/.github/workflows/adplus-openclash.yml
+++ b/.github/workflows/adplus-openclash.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: adhome-dockerman-openclash
+name: adplus-openclash
 
 on:
   repository_dispatch:
@@ -23,7 +23,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: adhome-dockerman-openclash.config
+  CONFIG_FILE: adplus-openclash.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
